schedule next 7 days

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -6,7 +6,9 @@
       "manage-user": "Quản lý người dùng",
       "restaurant": "Nhà hàng",
       "manage-restaurant": "Quản lý nhà hàng",
+      "manage-schedule": "Quản lý lịch đặt bàn",
       "food": "Món ăn",
+      "manage-food": "Quản lý món ăn",
       "handbook": "Bài đăng"
     }
   }
